# StockMCP

./: .dockerignore  Dockerfile  README.md  pyproject.toml
src/: __init__.py  main.py  mcp_handlers.py  models.py  tools.py
tests/: conftest.py  test_api.py  test_mcp_handlers.py  test_models.py  test_tools.py
