[project]
name = "stockmcp"
version = "0.1.0"
description = "Model Context Protocol server for stock market data using Yahoo Finance"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "yfinance>=0.2.28",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.28.1",
    "rich>=14.1.0",
    "scipy>=1.10.0",
]

[project.scripts]
stockmcp = "stockmcp.jsonrpc_api:main"
stockmcp-jsonrpc = "stockmcp.jsonrpc_api:main"
stockmcp-http = "stockmcp.http_server:main"
stockmcp-proxy = "stockmcp.stdio_proxy:main"
stockmcp-native = "stockmcp.native_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pytest-mock>=3.10.0",
]
